--- a/index.html
+++ b/index.html
@@ -1,44 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Nodejs by alu0100696455</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Nodejs : ">
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Nodejs</title>
   </head>
+
   <body>
 
-      <header>
-        <h1>Nodejs</h1>
-        <p></p>
-      </header>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/alu0100696455/nodejs">View on GitHub</a>
 
-      <div id="banner">
-        <span id="logo"></span>
+          <h1 id="project_title">Nodejs</h1>
+          <h2 id="project_tagline"></h2>
 
-        <a href="https://github.com/alu0100696455/nodejs" class="button fork"><strong>View On GitHub</strong></a>
-        <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/alu0100696455/nodejs/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/alu0100696455/nodejs/tarball/master" class="button">TAR</a></li>
-          </ul>
-        </div>
-      </div><!-- end banner -->
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/alu0100696455/nodejs/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/alu0100696455/nodejs/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
 
-    <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
-      <section>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a id="tutorial-de-instalación-de-nodejs" class="anchor" href="#tutorial-de-instalaci%C3%B3n-de-nodejs" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tutorial de instalación de Node.js</h1>
 
@@ -72,7 +64,7 @@
 <h2></h2>
 
 <h2>
-<a id="instalación-en-windows" class="anchor" href="#instalaci%C3%B3n-en-windows" aria-hidden="true"><span class="octicon octicon-link"></span></a>Instalación en Windows</h2>
+<a id="windows" class="anchor" href="#windows" aria-hidden="true"><span class="octicon octicon-link"></span></a>Windows</h2>
 
 <h3>
 <a id="1-instalación-1" class="anchor" href="#1-instalaci%C3%B3n-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>1. Instalación</h3>
@@ -101,12 +93,17 @@
 
 <p><img src="./img/primerospasos.png" alt=""></p>
       </section>
-      <footer>
-        <p>Project maintained by <a href="https://github.com/alu0100696455">alu0100696455</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Nodejs maintained by <a href="https://github.com/alu0100696455">alu0100696455</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
     
+
   </body>
 </html>
