Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <p>Node.js® is a platform built on Chrome's JavaScript runtime for easily building fast, scalable network applications. Node.js uses an event-driven, non-blocking I/O model that makes it lightweight and efficient, perfect for data-intensive real-time applications that run across distributed devices.</p>
 
-<p><img src="./img/nodejs-logo.png" alt=""></p>
+<p><img src="https://github.com/alu0100696455/nodejs/blob/master/img/nodejs-logo.png" alt=""></p>
 
 <h2>
 <a id="ubuntu" class="anchor" href="#ubuntu" aria-hidden="true"><span class="octicon octicon-link"></span></a>Ubuntu</h2>
@@ -91,7 +91,7 @@
 
 <p>La salida de estas líneas debería coincidir con la imagen adjunta.</p>
 
-<p><img src="./img/primerospasos.png" alt=""></p>
+<p><img src="https://github.com/alu0100696455/nodejs/blob/master/img/primerospasos.png" alt=""></p>
       </section>
     </div>
 
